# leap-c

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  api.html  environment_flowsolver.yml  genindex.html  index.html  install_new_casadi_py311_arm.sh  install_new_casadi_py311_x86_64.sh  installation.html  objects.inv  pyproject.toml  rebuild_acados.sh  ruff.toml  run.py  run_rl.py  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree
.doctrees/api/: dynamics.doctree  mpc.doctree
.doctrees/api/nn/: index.doctree
.doctrees/api/rl/: index.doctree
.doctrees/getting_started/: index.doctree
.github/workflows/: acados_build.yml  documentation.yml  python-app.yml  run_ruff.yml  tests.yml
_sources/: api.md.txt
_sources/api/: dynamics.md.txt
_sources/api/nn/: index.md.txt
_sources/api/rl/: index.md.txt
_sources/getting_started/: index.md.txt
api/: dynamics.html  mpc.html
api/nn/: index.html
api/rl/: index.html
docs/: README.md
docs/source/: api.md  conf.py  index.md  installation.md
docs/source/api/: dynamics.md  mpc.md  ocp_env.md  utils.md
docs/source/getting_started/: index.md
getting_started/: index.html
leap_c/: collate.py  controller.py  dynamics.py  env_wrapper.py  linear_mpc.py  logger.py  logging.py  mpc.py  ocp_env.py  registry.py  resurrect.py  rollout.py  run.py  task.py  torch_modules.py  trainer.py  types.py  util.py  utils.py
leap_c/acados/: dynamics.py  layer.py  mpc.py
leap_c/autograd/: function.py  torch.py
leap_c/examples/: __init__.py  linear_system.py  pendulum_on_cart.py  plot_utils.py  point_mass.py  render_utils.py  util.py
leap_c/examples/cartpole/: config.py  controller.py  env.py  mpc.py  task.py
leap_c/examples/chain/: config.py  controller.py  env.py  mpc.py  plot_utils.py  task.py  utils.py
leap_c/examples/cylinder/: config.py  controller.py  (+5 more)
leap_c/nn/: autograd.py  extractor.py  gaussian.py  mlp.py  modules.py  utils.py
leap_c/rl/: __init__.py  replay_buffer.py  sac.py  sac_fop.py  sac_fou.py  sac_zop.py  trainer.py  utils.py
leap_c/utils/: cfg.py  git.py  gym.py  latexify.py  logger.py  resurrect.py  rollout.py  seed.py
playground/: reacher_nominal_mpc.py
scripts/: run_controller.py  run_sac.py  run_sac_fop.py  run_sac_zop.py  sac.py
scripts/clean/: run.py
scripts/point_mass/: point_mass_fop.py
scripts/quadrotor/: debug_sac_fop.py  quadrotor_mass_sac.py  quadrotor_mass_sac_fop.py  quadrotor_mass_sac_zop.py  run_qr.py
scripts/rl/: linear_system_sac.py
seal/: dynamics.py  logging.py  mpc.py  ocp_env.py  super_transition.py  test.py  torch_modules.py  torch_utils.py  util.py
seal/examples/: linear_system.py  pendulum.py  pendulum_on_cart.py  point_mass.py  util.py
seal/il/: il_env.py
seal/nn/: autograd.py  modules.py
seal/rl/: actors_base.py  critics_base.py  replay_buffer.py  run.py  sac.py  sac_modules.py  trainer.py  trainer_base.py
tests/leap_c/: conftest.py  test_autograd.py  test_chain.py  test_dynamics.py  test_env.py  test_logger.py  test_mpc.py  test_mpc_p_global.py  test_ocp_env.py  test_pendulum_on_cart.py  test_point_mass.py  test_replay_buffer.py  test_resurrect.py  test_sac.py  test_trainer.py
tests/seal/: conftest.py  test_autograd.py  test_dynamics.py  test_mpc.py  test_mpc_p_global.py  test_ocp_env.py  test_pendulum_on_cart.py  test_point_mass.py  test_sac.py
(+102 files in other folders)
