[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SEAL"
version = "2024.0.0"
dependencies = ["gymnasium", "scipy", "numpy", "pandas", "ruff"]

requires-python = ">=3.8"
authors = [{ name = "Dirk Reinhardt", email = "dirk.p.reinhardt@ntnu.no" }]
maintainers = [{ name = "Dirk Reinhardt", email = "dirk.p.reinhardt@ntnu.no" }]
description = "Super Efficient Acados Learning"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
  "Reinforcement Learning",
  "Imitation Learning",
  "Model Predictive Control",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.optional-dependencies]
test = ["pytest", "pygame", "moviepy"]
rendering = ["pygame", "moviepy"]
docs = ["sphinx", "sphinx_rtd_theme", "myst-parser"]
dev = ["seal[rendering]", "seal[docs]", "seal[test]"]
wandb = ["wandb"]

[tool.setuptools]
packages = ["seal"]


[project.urls]
Repository = "https://github.com/JasperHoffmann/seal"
"Bug Tracker" = "https://github.com/JasperHoffmann/seal/issues"

[tool.pytest.ini_options]
testpaths = "tests"
